font style changes

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 <!--titulo-->
 <header>
   <div class="container">
-    <h1 class="form-title">¿Qué es Plan Renault?</h1><br>
+    <h1>¿Qué es Plan Renault?</h1><br>
  </div> 
 </header>
 <!--descripcion-->
@@ -69,13 +69,13 @@
     <h2>Cambio de Unidad</h2>
     <img src="img/renault-cambio-de-unidad.png" alt="Plan Renault Cambio de Unidad" width="64" height="64" class="img-plan">
     <p>Con <strong>Plan Rombo Renault</strong> cuando resultas adjudicado podés optar por cualquier modelo de la gama que comercializa <strong>Renault</strong>, abonando la diferencia de valor entre los modelos.</p><br>
-    <h3>Consulte por Promociones, Premios, y Descuentos Exclusivos por Cierre de Círculos (Hasta Agotar Stock/Fecha de Cierre).</h3>
+    <h2>Consulte por Promociones, Premios, y Descuentos Exclusivos por Cierre de Círculos (Hasta Agotar Stock/Fecha de Cierre).</h2>
     <br>
   </div>
 <!--formulario-->
   <div class="container" id="contacto">  
-    <h3 class="form-title">Consultar con un Asesor Oficial Renault</h3>
-    <p class="form-desc">Complete el siguiente formulario y un asesor Renault se contactará con usted para brindarle más información</p>  
+    <h1>Consultar con un Asesor Oficial Renault</h1>
+    <p>Complete el siguiente formulario y un asesor Renault se contactará con usted para brindarle más información</p>  
     <form>
       <div class="form-group">
         <label>Nombre</label>
