--- a/kwid.html
+++ b/kwid.html
@@ -54,7 +54,7 @@
 <!--titulo-->
 <header>
   <div class="container">
-    <h1 class="form-title">Renault Kwid</h1>
+    <h1>Renault Kwid</h1>
  </div> 
 </header>
 <!--galeria de fotos--> 
@@ -100,7 +100,7 @@
 </div>  
 <!--descripcion-->
   <div class="container">
-    <h1 class="form-title">Cuota desde $4185</h1>
+    <h1>Cuota desde $4185</h1>
     <ul class="detalles-modelos">
       <li>Valor 0KM: $502200</li>
       <li>100% FINANCIADO</li>
@@ -110,7 +110,7 @@
       <li>TODOS LOS MEDIOS DE PAGO</li>
       <li>Tomamos tu USADO!</li>
     </ul>
-    <p class="descripcion-desktop">Promoción Exclusiva Renault Argentina – Suscribite <strong>HOY</strong> y recibí una <strong>BONIFICACIÓN DE $50000</strong><br>
+    <p>Promoción Exclusiva Renault Argentina – Suscribite <strong>HOY</strong> y recibí una <strong>BONIFICACIÓN DE $50000</strong><br>
     Complete el siguiente formulario y un asesor Renault se contactará con usted para brindarle más información</p>  
   </div>  
 <!--formulario-->
