fix media queries

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
     <h2>Cambio de Unidad</h2>
     <img src="img/renault-cambio-de-unidad.png" alt="Plan Renault Cambio de Unidad" width="64" height="64" class="img-plan">
     <p>Con <strong>Plan Rombo Renault</strong> cuando resultas adjudicado podés optar por cualquier modelo de la gama que comercializa <strong>Renault</strong>, abonando la diferencia de valor entre los modelos.</p><br>
-    <h2>Consulte por Promociones, Premios, y Descuentos Exclusivos por Cierre de Círculos (Hasta Agotar Stock/Fecha de Cierre).</h2>
+    <p class="consulte">Consulte por Promociones, Premios, y Descuentos Exclusivos por Cierre de Círculos (Hasta Agotar Stock/Fecha de Cierre).</p>
     <br>
   </div>
 <!--formulario-->
@@ -123,7 +123,7 @@
   <footer>
     <img class="m-auto d-block img-fluid" src="img/mobile/promo-banner-mobile.jpg">
   </footer>
-  <a id="back-to-top" href="#" class="btn btn-primary-outline btn-lg back-to-top" role="button"><i class="fas fa-arrow-up"></i></a>
+  <a id="back-to-top" href="#" class="btn-light btn-lg" role="button"><i class="fas fa-arrow-up"></i></a>
 <!--scripts-->
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
