--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   <footer>
     <img class="m-auto d-block img-fluid" src="img/desktop/consultas-banner.jpg">
   </footer>
-  <a id="back-to-top" href="#" class="btn btn-light btn-lg back-to-top" role="button"><i class="fas fa-arrow-up"></a>
+  <a id="back-to-top" href="#" class="btn-light btn-lg" role="button"><i class="fas fa-arrow-up"></i></a>
 <!--scripts-->
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
