--- a/sandero.html
+++ b/sandero.html
@@ -162,7 +162,7 @@
   <footer>
     <img class="m-auto d-block img-fluid" src="img/mobile/promo-banner-mobile.jpg">
   </footer>
-  <a id="back-to-top" href="#" class="btn btn-primary-outline btn-lg back-to-top" role="button"><i class="fas fa-arrow-up"></i></a>
+  <a id="back-to-top" href="#" class="btn-light btn-lg" role="button"><i class="fas fa-arrow-up"></i></a>
 <!--scripts-->
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
