--- a/index.html
+++ b/index.html
@@ -105,25 +105,25 @@
     <p class="descripcion-desktop"><strong>Renault</strong> te la posibilidad de acceder, mediante el pago de cuotas mensuales en pesos, y de bajo monto, sin anticipos ni requisitos de ingresos, a los vehículos de la amplia gama de modelos que <strong>Renault</strong> pensó para vos, facilitándote el acceso al mismo, prestándote una alta calidad de servicio y atención.</p>
     <p class="descripcion-desktop">Financiá con <strong>Renault</strong> porque es ideal para acceder a tu 0km cubriendo mínimas cuotas sin interés, rentables y seguras, con <strong>entrega por fábrica a partir de la cuota 2 y múltiples beneficios.</strong></p>
     <img class="mx-auto p-2 d-block img-fluid" src="img/desktop/promo-banner.jpg">
-    <img class="mx-auto p-2 d-block img-fluid" src="img/desktop/kwid-banner.jpg">
-    <img class="mx-auto p-2 d-block img-fluid" src="img/desktop/logan-banner.jpg">
-    <img class="mx-auto p-2 d-block img-fluid" src="img/desktop/kangoo-banner.jpg">
-    <img class="mx-auto p-2 d-block img-fluid" src="img/desktop/oroch-banner.jpg">
-    <img class="mx-auto p-2 d-block img-fluid" src="img/desktop/duster-banner.jpg">
-    <img class="mx-auto p-2 d-block img-fluid" src="img/desktop/sandero-banner.jpg">
-    <img class="mx-auto p-2 d-block img-fluid" src="img/desktop/stepway-banner.jpg">
+    <a href="kwid.html"><img class="mx-auto p-2 d-block img-fluid" src="img/desktop/kwid-banner.jpg" title="Renault Kwid" alt="Kwid"></a>
+    <a href="logan.html"><img class="mx-auto p-2 d-block img-fluid" src="img/desktop/logan-banner.jpg" title="Renault Logan" alt="Logan"></a>
+    <a href="kangoo.html"><img class="mx-auto p-2 d-block img-fluid" src="img/desktop/kangoo-banner.jpg" title="Renault Kangoo" alt="Kangoo"></a>
+    <a href="oroch.html"><img class="mx-auto p-2 d-block img-fluid" src="img/desktop/oroch-banner.jpg" title="Renault Oroch" alt="Oroch"></a>
+    <a href="duster.html"><img class="mx-auto p-2 d-block img-fluid" src="img/desktop/duster-banner.jpg" title="Renault Duster" alt="Duster"></a>
+    <a href="sandero.html"><img class="mx-auto p-2 d-block img-fluid" src="img/desktop/sandero-banner.jpg" title="Renault Sandero" alt="Sandero"></a>
+    <a href="stepway.html"><img class="mx-auto p-2 d-block img-fluid" src="img/desktop/stepway-banner.jpg" title="Renault Stepway" alt="Stepway"></a>
   </div>
 <!--descripcion responsive--> 
   <div class="container d-lg-none">
     <p class="descripcion-mobile"><strong>Plan Renault</strong> te permite acceder a tu <strong>Renault 0 KM</strong>. Totalmente en cuotas sin interés, y además te brinda muchísimas ventajas para hacerte todo mucho más fácil.</p>
     <p class="separador"><img class="mx-auto p-2 d-block img-fluid" alt="Promoción Plan Renault" src="img/mobile/promo-banner-mobile.jpg"></p>
-    <p class="separador"><img class="mx-auto p-2 d-block img-fluid" src="img/mobile/kwid-banner-mobile.jpg"></p>
-    <p class="separador"><img class="mx-auto p-2 d-block img-fluid" src="img/mobile/logan-banner-mobile.jpg"></p>
-    <p class="separador"><img class="mx-auto p-2 d-block img-fluid" src="img/mobile/kangoo-banner-mobile.jpg"></p>
-    <p class="separador"><img class="mx-auto p-2 d-block img-fluid" src="img/mobile/oroch-banner-mobile.jpg"></p>
-    <p class="separador"><img class="mx-auto p-2 d-block img-fluid" src="img/mobile/duster-banner-mobile.jpg"></p>
-    <p class="separador"><img class="mx-auto p-2 d-block img-fluid" src="img/mobile/sandero-banner-mobile.jpg"></p>
-    <p class="separador"><img class="mx-auto p-2 d-block img-fluid" src="img/mobile/stepway-banner-mobile.jpg"></p>
+    <p class="separador"><a href="kwid.html"><img class="mx-auto p-2 d-block img-fluid" alt="Kwid" src="img/mobile/kwid-banner-mobile.jpg"></a></p>
+    <p class="separador"><a href="logan.html"><img class="mx-auto p-2 d-block img-fluid" alt="Logan" src="img/mobile/logan-banner-mobile.jpg"></a></p>
+    <p class="separador"><a href="kangoo.html"><img class="mx-auto p-2 d-block img-fluid" alt="Kangoo" src="img/mobile/kangoo-banner-mobile.jpg"></a></p>
+    <p class="separador"><a href="oroch.html"><img class="mx-auto p-2 d-block img-fluid" alt="Oroch" src="img/mobile/oroch-banner-mobile.jpg"></a></p>
+    <p class="separador"><a href="duster.html"><img class="mx-auto p-2 d-block img-fluid" alt="Duster" src="img/mobile/duster-banner-mobile.jpg"></a></p>
+    <p class="separador"><a href="sandero.html"><img class="mx-auto p-2 d-block img-fluid" alt="Sandero" src="img/mobile/sandero-banner-mobile.jpg"></a></p>
+    <p class="separador"><a href="stepway.html"><img class="mx-auto p-2 d-block img-fluid" alt="Stepway" src="img/mobile/stepway-banner-mobile.jpg"></a></p>
   </div>
 <!--formulario-->
   <div class="container" id="contacto">
