--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Plan Renault - Financiación de tu Renault 0km Directa de Fábrica, Sin Interés y en Pesos">
   <meta name="keywords" content="plan, renault, financiacion, fabrica, sin interes, pesos, 0km, nuevo, cuotas, gobierno, precio, clio, kangoo, fluence, megane, twingo, laguna, sandero, duster, logan">
-  <title>Renault Logan | Plan Renault</title>
+  <title>Contacto | Plan Renault</title>
   <link rel="icon" href="img/cropped-logo-renault.png" sizes="192x192">
   <link rel="canonical" href="https://www.plan-renault.com.ar/">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"> 
@@ -54,67 +54,19 @@
 <!--titulo-->
 <header>
   <div class="container">
-    <h1>Renault Logan</h1>
+    <h1>Contacto</h1><br>
  </div> 
 </header>
-<!--galeria de fotos--> 
-  <div class="container text-center">
-    <img src="img/logan/logan-1.jpg" class="img-fluid" alt="renault logan">
-    <div class="row">
-      <div class="col p-0">
-        <a class="thumbnail d-block my-4 h-100" href="#" data-image-id="" data-toggle="modal" data-image="img/logan/logan-2.jpg" data-target="#image-gallery"><img class="img-fluid thumb" src="img/logan/logan-2.jpg"alt="renault logan"></a>
-      </div>
-      <div class="col p-0">
-        <a class="thumbnail d-block my-4 h-100" href="#" data-image-id="" data-toggle="modal" data-image="img/logan/logan-3.jpg" data-target="#image-gallery"><img class="img-fluid thumb" src="img/logan/logan-3.jpg"
-          alt="renault logan"></a>
-      </div>
-      <div class="col p-0">
-        <a class="thumbnail d-block my-4 h-100" href="#" data-image-id="" data-toggle="modal" data-image="img/logan/logan-4.jpg" data-target="#image-gallery"><img class="img-fluid thumb" src="img/logan/logan-4.jpg" alt="renault logan"></a>
-      </div>
-      <div class="col p-0">
-        <a class="thumbnail d-block my-4 h-100" href="#" data-image-id="" data-toggle="modal" data-image="img/logan/logan-5.jpg" data-target="#image-gallery"><img class="img-fluid thumb" src="img/logan/logan-5.jpg"
-        alt="Another alt text"></a>
-      </div>
-      <div class="col p-0">
-        <a class="thumbnail d-block my-4 h-100" href="#" data-image-id="" data-toggle="modal" data-image="img/logan/logan-6.jpg" data-target="#image-gallery"><img class="img-fluid thumb" src="img/logan/logan-6.jpg"
-        alt="renault logan"></a>
-      </div>
-<!-- pop ups con imágenes grandes -->    
-  <div class="modal fade" id="image-gallery" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal"><i class="fas fa-times"></i></button>
-        </div>
-        <div class="modal-body">
-            <img id="image-gallery-image" class="img-responsive col-md-12" src="">
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary float-left" id="show-previous-image"><i class="fas fa-arrow-left"></i></button>
-          <button type="button" id="show-next-image" class="btn btn-secondary float-right"><i class="fas fa-arrow-right"></i></button>
-        </div>
-      </div>
-    </div>
-  </div>
-  </div>
-</div>  
 <!--descripcion-->
   <div class="container">
-    <h1>Cuota desde $4185</h1>
-    <ul class="detalles-modelos">
-      <li>Valor 0KM: $502200</li>
-      <li>100% FINANCIADO</li>
-      <li>HASTA 120 CUOTAS</li>
-      <li>SIN INTERÉS</li>
-      <li>RETIRÁ DESDE CUOTA 2</li>
-      <li>TODOS LOS MEDIOS DE PAGO</li>
-      <li>Tomamos tu USADO!</li>
+    <p>Para mayor información, sírvase completar el presente formulario para que uno de nuestro asesores se comunique con usted dentro de las siguientes 24 hs, o utilice los siguientes canales de comunicación. ¡Gracias por su tiempo!</p>
+    <ul>
+      <li>Gerencia comercial: <a href="mailto:comercial@plan-renault.com.ar">comercial@plan-renault.com.ar</a></li>
+      <li>Atención al cliente: <a href="mailto:info@plan-renault.com.ar">info@plan-renault.com.ar</a></li>
     </ul>
-    <p>Promoción Exclusiva Renault Argentina – Suscribite <strong>HOY</strong> y recibí una <strong>BONIFICACIÓN DE $50000</strong><br>
-    Complete el siguiente formulario y un asesor Renault se contactará con usted para brindarle más información</p>  
-  </div>  
+  </div>
 <!--formulario-->
-  <div class="container" id="contacto">   
+  <div class="container" id="contacto">    
     <form>
       <div class="form-group">
         <label>Nombre</label>
