--- a/sandero.html
+++ b/sandero.html
@@ -43,10 +43,10 @@
           <a class="nav-link" href="about.html">¿Qué es Plan Renault?</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#contacto">¿Ya tenés un plan?</a>
+          <a class="nav-link" href="yatenes.html">¿Ya tenés un plan?</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#contacto">Contacto</a>
+          <a class="nav-link" href="contacto.html">Contacto</a>
         </li>
       </ul>
     </div>
