--- a/about.html
+++ b/about.html
@@ -76,14 +76,14 @@
   <div class="container" id="contacto">  
     <h1>Consultar con un Asesor Oficial Renault</h1>
     <p>Complete el siguiente formulario y un asesor Renault se contactará con usted para brindarle más información</p>  
-    <form name="contact-about" method="POST" data-netlify="true">
+    <form name="contacto" method="POST" data-netlify="true" action="datosok.html">
       <div class="form-group">
         <label>Nombre</label>
         <input type="text" class="form-control" name="nombre" required>
       </div>
       <div class="form-group">
         <label>Localidad</label>  
-          <select class="custom-select" name="localidad[]" multiple>
+          <select class="custom-select" name="localidad">
             <option selected>Elija su localidad</option>
             <option value="CABA">Capital Federal</option>
             <option value="GBA Norte">GBA Zona Norte</option>
@@ -126,7 +126,7 @@
       </div>
       <div class="form-group">
         <label>¿Qué modelo de Renault le interesa?</label>
-        <select class="custom-select" name="modelo[]" multiple>
+        <select class="custom-select" name="modelo">
           <option selected>Elija un modelo</option>
           <option value="Kwid">Kwid</option>
           <option value="Oroch">Oroch</option>
