font changes slider

--- a/about.html
+++ b/about.html
@@ -53,8 +53,8 @@
   </nav>
 <!--titulo-->
 <header>
-  <div class="container">
-    <h1>¿Qué es Plan Renault?</h1>
+  <div class="container"><br>
+    <h1><strong>¿Qué es Plan Renault?</strong></h1>
  </div> 
 </header>
 <!--descripcion-->
@@ -74,15 +74,15 @@
   </div>
 <!--formulario-->
   <div class="container" id="contacto">  
-    <h1>Consultar con un Asesor Oficial Renault</h1>
+    <h1><strong>Consultar con un Asesor Oficial Renault</strong></h1>
     <p>Complete el siguiente formulario y un asesor Renault se contactará con usted para brindarle más información</p>  
     <form name="contacto" method="POST" data-netlify="true" action="datosok.html">
       <div class="form-group">
-        <label>Nombre</label>
+        <label><b>Nombre</b></label>
         <input type="text" class="form-control" name="nombre" required>
       </div>
       <div class="form-group">
-        <label>Localidad</label>  
+        <label><b>Localidad</b></label>  
           <select class="custom-select" name="localidad">
             <option selected>Elija su localidad</option>
             <option value="CABA">Capital Federal</option>
@@ -117,15 +117,15 @@
           </select>
        </div>   
       <div class="form-group">
-        <label>Teléfono (Cód. de área + tel.)</label>
+        <label><b>Teléfono (Cód. de área + tel.)</b></label>
         <input type="tel" class="form-control" name="tel" required>
       </div>
       <div class="form-group">
-        <label>Dirección de mail</label>
+        <label><b>Dirección de mail</b></label>
         <input type="email" class="form-control" name="email">
       </div>
       <div class="form-group">
-        <label>¿Qué modelo de Renault le interesa?</label>
+        <label><b>¿Qué modelo de Renault le interesa?</b></label>
         <select class="custom-select" name="modelo">
           <option selected>Elija un modelo</option>
           <option value="Kwid">Kwid</option>
