--- a/yatenes.html
+++ b/yatenes.html
@@ -53,8 +53,8 @@
   </nav>
 <!--titulo-->
 <header>
-  <div class="container">
-    <h1>¿Ya tenés un plan?</h1><br>
+  <div class="container"><br>
+    <h1><strong>¿Ya tenés un plan?</strong></h1><br>
  </div> 
 </header>
 <!--descripcion-->
@@ -65,11 +65,11 @@
   <div class="container" id="contacto">    
     <form name="contacto" method="POST" data-netlify="true" action="datosok.html">
       <div class="form-group">
-        <label>Nombre</label>
+        <label><b>Nombre</b></label>
         <input type="text" class="form-control" name="nombre" required>
       </div>
       <div class="form-group">
-        <label>Localidad</label>  
+        <label><b>Localidad</b></label>  
           <select class="custom-select" name="localidad">
             <option selected>Elija su localidad</option>
             <option value="CABA">Capital Federal</option>
@@ -104,15 +104,15 @@
           </select>
        </div>   
       <div class="form-group">
-        <label>Teléfono (Cód. de área + tel.)</label>
+        <label><b>Teléfono (Cód. de área + tel.)</b></label>
         <input type="tel" class="form-control" name="tel" required>
       </div>
       <div class="form-group">
-        <label>Dirección de mail</label>
+        <label><b>Dirección de mail</b></label>
         <input type="email" class="form-control" name="email">
       </div>
       <div class="form-group">
-        <label>¿Qué modelo de Renault le interesa?</label>
+        <label><b>¿Qué modelo de Renault le interesa?</b></label>
         <select class="custom-select" name="modelo">
           <option selected>Elija un modelo</option>
           <option value="Kwid">Kwid</option>
