--- a/stepway.html
+++ b/stepway.html
@@ -53,13 +53,13 @@
   </nav>
 <!--titulo-->
 <header>
-  <div class="container">
-    <h1>Renault Sandero Stepway</h1>
+  <div class="container"><br>
+    <h1><strong>Renault Sandero Stepway</strong></h1>
  </div> 
 </header>
 <!--galeria de fotos--> 
   <div class="container text-center">
-    <img src="img/stepway/stepway-1.jpg" class="img-fluid" alt="renault stepway">
+    <a class="thumbnail" href="#" data-image-id="" data-toggle="modal" data-image="img/stepway/stepway-1.jpg" data-target="#image-gallery"><img src="img/stepway/stepway-1.jpg" class="img-fluid" alt="renault stepway"></a>
     <div class="row">
       <div class="col p-0">
         <a class="thumbnail d-block my-4 h-100" href="#" data-image-id="" data-toggle="modal" data-image="img/stepway/stepway-2.jpg" data-target="#image-gallery"><img class="img-fluid thumb" src="img/stepway/stepway-2.jpg"alt="renault stepway"></a>
@@ -100,7 +100,7 @@
 </div>  
 <!--descripcion-->
   <div class="container">
-    <h1>Cuota desde $4185</h1>
+    <h1><strong>Cuota desde $4185</strong></h1>
     <ul class="detalles-modelos">
       <li>Valor 0KM: $502200</li>
       <li>100% FINANCIADO</li>
@@ -117,11 +117,11 @@
   <div class="container" id="contacto">   
     <form name="contacto" method="POST" data-netlify="true" action="datosok.html">
       <div class="form-group">
-        <label>Nombre</label>
+        <label><b>Nombre</b></label>
         <input type="text" class="form-control" name="nombre" required>
       </div>
       <div class="form-group">
-        <label>Localidad</label>  
+        <label><b>Localidad</b></label>  
           <select class="custom-select" name="localidad">
             <option selected>Elija su localidad</option>
             <option value="CABA">Capital Federal</option>
@@ -156,15 +156,15 @@
           </select>
        </div>   
       <div class="form-group">
-        <label>Teléfono (Cód. de área + tel.)</label>
+        <label><b>Teléfono (Cód. de área + tel.)</b></label>
         <input type="tel" class="form-control" name="tel" required>
       </div>
       <div class="form-group">
-        <label>Dirección de mail</label>
+        <label><b>Dirección de mail</b></label>
         <input type="email" class="form-control" name="email">
       </div>
       <div class="form-group">
-        <label>¿Qué modelo de Renault le interesa?</label>
+        <label><b>¿Qué modelo de Renault le interesa?</b></label>
         <select class="custom-select" name="modelo">
           <option selected>Elija un modelo</option>
           <option value="Kwid">Kwid</option>
