--- a/kangoo.html
+++ b/kangoo.html
@@ -65,19 +65,16 @@
         <a class="thumbnail d-block my-4 h-100" href="#" data-image-id="" data-toggle="modal" data-image="img/kangoo/kangoo-2.jpg" data-target="#image-gallery"><img class="img-fluid thumb" src="img/kangoo/kangoo-2.jpg"alt="renault kangoo"></a>
       </div>
       <div class="col p-0">
-        <a class="thumbnail d-block my-4 h-100" href="#" data-image-id="" data-toggle="modal" data-image="img/kangoo/kangoo-3.jpg" data-target="#image-gallery"><img class="img-fluid thumb" src="img/kangoo/kangoo-3.jpg"
-          alt="renault kangoo"></a>
+        <a class="thumbnail d-block my-4 h-100" href="#" data-image-id="" data-toggle="modal" data-image="img/kangoo/kangoo-3.jpg" data-target="#image-gallery"><img class="img-fluid thumb" src="img/kangoo/kangoo-3.jpg" alt="renault kangoo"></a>
       </div>
       <div class="col p-0">
         <a class="thumbnail d-block my-4 h-100" href="#" data-image-id="" data-toggle="modal" data-image="img/kangoo/kangoo-4.jpg" data-target="#image-gallery"><img class="img-fluid thumb" src="img/kangoo/kangoo-4.jpg" alt="renault kangoo"></a>
       </div>
       <div class="col p-0">
-        <a class="thumbnail d-block my-4 h-100" href="#" data-image-id="" data-toggle="modal" data-image="img/kangoo/kangoo-5.jpg" data-target="#image-gallery"><img class="img-fluid thumb" src="img/kangoo/kangoo-5.jpg"
-        alt="Another alt text"></a>
+        <a class="thumbnail d-block my-4 h-100" href="#" data-image-id="" data-toggle="modal" data-image="img/kangoo/kangoo-5.jpg" data-target="#image-gallery"><img class="img-fluid thumb" src="img/kangoo/kangoo-5.jpg" alt="renault kangoo"></a>
       </div>
       <div class="col p-0">
-        <a class="thumbnail d-block my-4 h-100" href="#" data-image-id="" data-toggle="modal" data-image="img/kangoo/kangoo-6.jpg" data-target="#image-gallery"><img class="img-fluid thumb" src="img/kangoo/kangoo-6.jpg"
-        alt="renault kangoo"></a>
+        <a class="thumbnail d-block my-4 h-100" href="#" data-image-id="" data-toggle="modal" data-image="img/kangoo/kangoo-6.jpg" data-target="#image-gallery"><img class="img-fluid thumb" src="img/kangoo/kangoo-6.jpg" alt="renault kangoo"></a>
       </div>
 <!-- pop ups con imágenes grandes -->    
   <div class="modal fade" id="image-gallery" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
