--- a/index.html
+++ b/index.html
@@ -57,28 +57,28 @@
     <div class="carousel-inner" role="listbox">
       <div class="carousel-item active" style="background-image:url(img/desktop/kwid-header.jpg)">
         <div class="carousel-caption d-none d-md-block">
-          <h3 class="carousel-h3">Renault Kwid</h3>
+          <h3 class="carousel-h3"><b>Renault Kwid</b></h3>
           <p class="carousel-p">El SUV de los compactos.</p>
           <a href="kwid.html"><button class="btn btn-warning">+ Info</button></a>
         </div>
       </div>
       <div class="carousel-item" style="background-image:url(img/desktop/kangoo-header.jpg)">
         <div class="carousel-caption d-none d-md-block">
-          <h3 class="carousel-h3">Renault Kangoo</h3>
+          <h3 class="carousel-h3"><b>Renault Kangoo</b></h3>
           <p class="carousel-p">Un automóvil, utilitario, familiar.</p>
           <a href="kangoo.html"><button class="btn btn-warning">+ Info</button></a>
         </div>
       </div>
       <div class="carousel-item" style="background-image:url(img/desktop/oroch-header.jpg)">
         <div class="carousel-caption d-none d-md-block">
-          <h3 class="carousel-h3">Renault Oroch</h3>
+          <h3 class="carousel-h3"><b>Renault Oroch</b></h3>
           <p class="carousel-p">Una pickup diferente a todo lo que ya viste.</p>
           <a href="oroch.html"><button class="btn btn-warning">+ Info</button></a>
         </div>
       </div>
       <div class="carousel-item" style="background-image:url(img/desktop/sandero-header.jpg)">
         <div class="carousel-caption d-none d-md-block">
-          <h3 class="carousel-h3">Renault Sandero Stepway</h3>
+          <h3 class="carousel-h3"><b>Renault Sandero Stepway</b></h3>
           <p class="carousel-p">Viví el momento donde quiera que estés.</p>
           <a href="stepway.html"><button class="btn btn-warning">+ Info</button></a>
         </div>
